<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cmclinnovations</groupId>
  <artifactId>stack-clients</artifactId>
  <version>1.32.0</version>

  <name>Stack Clients</name>
  <url>https://theworldavatar.io</url>

  <parent>
    <groupId>uk.ac.cam.cares.jps</groupId>
    <artifactId>jps-parent-pom</artifactId>
    <version>2.3.0</version>
  </parent>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.release>11</maven.compiler.release>

    <!--podman.file>https://storage.googleapis.com/libpod-master-releases/swagger-v4.3.yaml</podman.file-->
    <podman.file>${project.basedir}/src/main/swagger/podman/swagger-v4.3.yaml</podman.file>

    <superset.file>${project.basedir}/src/main/swagger/superset/openapi.yaml</superset.file>

  </properties>

  <!-- Repository locations to deploy to -->
  <distributionManagement>
    <repository>
      <id>repo</id>
      <name>TheWorldAvatar Maven Repository</name>
      <url>https://maven.pkg.github.com/cambridge-cares/TheWorldAvatar/</url>
    </repository>
  </distributionManagement>

  <dependencies>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jdk8</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-client</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson -->
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart -->
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-multipart</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.brsanthu/migbase64 -->
    <dependency>
      <groupId>com.brsanthu</groupId>
      <artifactId>migbase64</artifactId>
    </dependency>

    <dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-annotations</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java -->
    <dependency>
      <groupId>com.github.docker-java</groupId>
      <artifactId>docker-java</artifactId>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java-transport-httpclient5 -->
    <dependency>
      <groupId>com.github.docker-java</groupId>
      <artifactId>docker-java-transport-httpclient5</artifactId>
    </dependency>

    <dependency>
      <groupId>it.geosolutions</groupId>
      <artifactId>geoserver-manager</artifactId>
    </dependency>

    <dependency>
      <groupId>com.github.odiszapc</groupId>
      <artifactId>nginxparser</artifactId>
    </dependency>

    <dependency>
      <groupId>it.unibz.inf.ontop</groupId>
      <artifactId>ontop-system-sql-owlapi</artifactId>
    </dependency>

    <!-- used in the DerivationClient to detect circular dependencies -->
    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-core</artifactId>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>

    <dependency>
      <groupId>net.sf.py4j</groupId>
      <artifactId>py4j</artifactId>
    </dependency>

    <dependency>
      <groupId>uk.ac.cam.cares.jps</groupId>
      <artifactId>jps-base-lib</artifactId>
      <version>1.43.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-annotations</artifactId>
    </dependency>

    <dependency>
      <groupId>com.blazegraph</groupId>
      <artifactId>bigdata-client</artifactId>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.12.0</version>
    </dependency>

  </dependencies>

  <build>

    <plugins>
      <plugin>
        <!-- This plugin edits the manifest file that goes inside the .jar file -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <!-- These properties add the copied dependencies to the classpath so the .jar can
        find them at runtime. -->
              <addClasspath>true</addClasspath>
              <classpathPrefix>./lib/</classpathPrefix>
              <classpathLayoutType>simple</classpathLayoutType>
              <useUniqueVersions>false</useUniqueVersions>
              <mainClass>com.cmclinnovations.stack.App</mainClass>
            </manifest>
          </archive>
          <outputDirectory>${project.build.directory}</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <!-- This plugin copies all of the .jar dependencies into a 'lib' folder in the target
    directory. -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <?m2e ignore?>
            <id>copy-jar-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <includeScope>runtime</includeScope>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <useRepositoryLayout>false</useRepositoryLayout>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-codegen-maven-plugin</artifactId>
        <executions>
          <execution>
            <?m2e execute onConfiguration?>
            <id>generate-swagger-client</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${podman.file}</inputSpec>
              <language>java</language>
              <modelPackage>${project.groupId}.swagger.podman.model</modelPackage>
              <apiPackage>${project.groupId}.swagger.podman.api</apiPackage>
              <configOptions>
                <dateLibrary>legacy</dateLibrary>
                <library>jersey2</library>
              </configOptions>
              <addCompileSourceRoot>true</addCompileSourceRoot>
              <generateApis>true</generateApis>
              <generateApiTests>false</generateApiTests>
              <generateApiDocumentation>false</generateApiDocumentation>
              <generateModels>true</generateModels>
              <modelsToGenerate></modelsToGenerate>
              <generateModelTests>false</generateModelTests>
              <generateModelDocumentation>false</generateModelDocumentation>
              <generateSupportingFiles>true</generateSupportingFiles>
              <supportingFilesToGenerate></supportingFilesToGenerate>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>io.swagger.codegen.v3</groupId>
        <artifactId>swagger-codegen-maven-plugin</artifactId>
        <executions>
          <execution>
            <?m2e execute onConfiguration?>
            <id>generate-superset-swagger-client</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${superset.file}</inputSpec>
              <language>java</language>
              <modelPackage>${project.groupId}.swagger.superset.model</modelPackage>
              <apiPackage>${project.groupId}.swagger.superset.api</apiPackage>
              <configOptions>
                <dateLibrary>legacy</dateLibrary>
                <library>jersey2</library>
              </configOptions>
              <addCompileSourceRoot>true</addCompileSourceRoot>
              <generateApis>true</generateApis>
              <generateApiTests>false</generateApiTests>
              <generateApiDocumentation>false</generateApiDocumentation>
              <generateModels>true</generateModels>
              <modelsToGenerate></modelsToGenerate>
              <generateModelTests>false</generateModelTests>
              <generateModelDocumentation>false</generateModelDocumentation>
              <generateSupportingFiles>true</generateSupportingFiles>
              <supportingFilesToGenerate></supportingFilesToGenerate>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>

  </build>

</project>